--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -517,9 +517,13 @@
     "message": "Reload all",
     "description": "Reload all"
   },
+  "commandLabelToRootURL": {
+    "message": "To root URL",
+    "description": "To root URL"
+  },
   "commandLabelURLLevelUp": {
-    "message": "URL hierarchy up",
-    "description": "URL hierarchy up"
+    "message": "URL level up",
+    "description": "URL level up"
   },
   "commandLabelIncreaseURLNumber": {
     "message": "Increase URL number",
@@ -825,6 +829,10 @@
   "commandDescriptionReloadAllTabs": {
     "message": "Reloads all tabs.",
     "description": "Reloads all tabs."
+  },
+  "commandDescriptionToRootURL": {
+    "message": "Goes to the main page of the website.",
+    "description": "Goes to the main page of the website."
   },
   "commandDescriptionURLLevelUp": {
     "message": "Goes up the URL hierarchy for one level.",
