--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -550,8 +550,8 @@
     "description": "Open link in new private window"
   },
   "commandLabelSearchTextSelection": {
-    "message": "Search selected text",
-    "description": "Search selected text"
+    "message": "Search text selection",
+    "description": "Search text selection"
   },
   "commandLabelSearchClipboard": {
     "message": "Search clipboard",
