--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1175,6 +1175,10 @@
     "message": "Top-level frame",
     "description": "Top-level frame"
   },
+  "commandSettingLabelCustomMatchPattern": {
+    "message": "Custom match pattern",
+    "description": "Custom match pattern"
+  },
   "commandSettingLabelBrowsingDataCache": {
     "message": "Cache",
     "description": "Cache"
@@ -1319,6 +1323,10 @@
   "commandSettingDescriptionTargetFrame": {
     "message": "The frame in which the user script should be injected.",
     "description": "The frame in which the user script should be injected."
+  },
+  "commandSettingDescriptionCustomMatchPattern": {
+    "message": "A pattern in the form of a regular expression to match a specific part of a string. If ommitted an internal pattern is used.",
+    "description": "A pattern in the form of a regular expression to match a specific part of a string. If ommitted an internal pattern is used."
   },
 
   "commandErrorNotificationTitle": {
