--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1031,8 +1031,8 @@
     "description": "Removes the specified browsing data."
   },
   "commandDescriptionRunMultiPurposeCommand": {
-    "message": "Runs a custom sequence of commands one by one until one succeeds.",
-    "description": "Runs a custom sequence of commands one by one until one succeeds."
+    "message": "Combines multiple commands into one and executes the first command which runs successfully under the given context/conditions.",
+    "description": "Combines multiple commands into one and executes the first command which runs successfully under the given context/conditions."
   },
 
   "commandSettingLabelNewTabPosition": {
